Correctly align Tweet button

--- a/src/app/components/tweet-composer/tweet-composer/tweet-composer.component.css
+++ b/src/app/components/tweet-composer/tweet-composer/tweet-composer.component.css
@@ -99,9 +99,9 @@ article {
 footer {
   display: flex;
   align-items: center;
-  height: 49px;
 
-  margin: 5px 5px 5px -8px; /* -8 to offset icon padding that is needed for hover background */
+  height: 49px;
+  margin: 5px -8px; /* -8 to offset the icons background padding (which is visible when hovering) */
 }
 
 footer > .icon-container {
